# Learning-C

./: .gitignore  CMakeLists.txt  README.md
arquivos/csv/: csv.c  read_csv.c  servidor.csv
arquivos/txt/: escrita.c  leitura.c  txt.c
arquivos/txt/sql/: sqlite.c
calendario/: argumento.c  arqBin1.c  arqBin2.c  arqBin3.c  aulaCalendario.c  calendario.c  calendario.txt  exemplo_tempo.c  passagem.c  passagem_para_main.c  teste.c  teste2.c  testeCalendario.c
cpf/: cpf.c
lista-1/: 1.c  10.c  2.c  3.c  4.c  5.c  6.c  7.c  9.c  extra.c
lista-3/: 1.c  4.c  5.c
musica/: CMakeLists.txt  main.cpp
struct/: 1.c  2.c  sistemaTurmaListaDinamica_4.c  sistemaTurmaListaDinamica_5.c  sistemaTurmaSemAlocacao.c  sistemaTurmaSemAlocacao2.c
testes/: calcParametro.c  classe.c  dataParametro.c  ff.c  func.c  menu.c  ordenaAZ.c  teste.c  teste.cpp  testepv.c  word-split-2.c  word-split.c
