cmake_minimum_required(VERSION 3.17)
set(CMAKE_CXX_STANDARD 20)
project(c)

#include_directories("C:/tools/SFML-2.5.1/include")
#set(SFML_ROOT C:/tools/SFML-2.5.1)
#set(SFML_STATIC_LIBRARIES TRUE)
#
#set(CMAKE_Module_pr "C:/tools/SFML-2.5.1/lib/cmake/SFML;${CMAKE_MODULE_PATH}")
#find_package(SFML 2.5.1 COMPONENTS audio REQUIRED)
#message("${CMAKE_SIZEOF_VOID_P}")

add_executable(c lista-3/5.c)